kubernetes/home-lab/apps/flux-system/addons/webhooks/github/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: github-webhook
spec:
  hostnames:
    - "flux-webhook.${EXTERNAL_HOSTNAME}"
  parentRefs:
    - name: envoy-external
      namespace: networking
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /hook/
      backendRefs:
        - name: webhook-receiver
          port: 80
